--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 .page{background:#53A0ABF; z-index:0;}
-.page1{background:#dfbe46; z-index:0;}
+.page1{background:#53A0AB; z-index:0;}
 
 .content{text-align: left; width:75%; margin-left:10%; margin-top:100px; animation: fadeIn 8s ease forwards; padding-top:100px; padding-bottom:100px; z-index:0;}
 .text{font-family: nimbus-sans-extended, sans-serif; font-weight: 400; font-style: normal; font-size:18px; line-height:1.6em; color:#eaeaea; z-index:0;}
@@ -124,7 +124,7 @@
 	
 	<div class="page" id="about">
         
-        <div class="menu"><div class="tag"><img src="mmb_ko.png" style="width:125px; vertical-align:middle; padding-right:50px;"> <a href="#about">ABOUT US</a> • <a href="#work">WORK</a> • <a href="#contact">CONTACT</a></div></div>
+        <div class="menu"><div class="tag"><img src="mmb_ko.png" style="width:125px; vertical-align:middle; padding-right:50px;"> <a href="#about">ABOUT US</a> ■ <a href="#work">WORK</a> ■ <a href="#contact">CONTACT</a></div></div>
         
 	<div class="content" style="margin-top:-50px;">
         <div class="big-text" style="margin-top:150px;">WE DIDN'T COME TO FLORIDA TO RETIRE.</div>	
@@ -133,8 +133,6 @@
 <br><br>
 We’re independently owned, strategically minded, creatively driven, and results obsessed. We speak QSR, CPG, branding, analytics, conversion rates. And we’re fueled by an entrepreneurial need to disrupt the status quo. If these are traits you’d like in an agency – or are missing from your current one – let’s connect. We’d love to show you how our unrivalled approach to building brands can benefit your own. <br><br>
 
-		
-		<br><br>
 		</div>
 		</div>
 	</div>
