--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	
 	<div class="page" id="about">
         
-        <div class="menu"><div class="tag"><img src="mmb-fla_ko.png" style="width:125px; vertical-align:middle; padding-right:50px; padding-top:-10px;"> <a href="#about">ABOUT US</a> ■ <a href="#work">WORK</a> ■ <a href="#contact">CONTACT</a></div></div>
+        <div class="menu"><div class="tag"><img src="mmb-fla_ko.png" style="width:125px; padding-right:50px;"> <a href="#about">ABOUT US</a> ■ <a href="#work">WORK</a> ■ <a href="#contact">CONTACT</a></div></div>
         
 	<div class="content" style="margin-top:-50px;">
 		<img src="mmb-squares.png" style=" position: fixed; top:-12%; right:0; z-index:-5; width:50%; overflow-x: hidden; opacity:.2;">
