--- a/index.html
+++ b/index.html
@@ -152,9 +152,8 @@
 
         <div class="big-text" style="margin-top:150px;">WE DIDN'T COME TO FLORIDA TO RETIRE.</div>	
         <div class="tag">LET'S GET TO WORK.</div>
-        <div class="text" style="width:60%">Hello, we’re MMB – a.k.a. McCarthy Mambro Bertino. Yes, we’re new to the region. But so are a lot of companies expanding here. And that’s where we can help. With a 20-year legacy of building multi-dimensional, industry-leading brands, we specialize in growing businesses in hyper-competitive categories. From food and fashion, to automotive and healthcare.
-<br><br>
-We’re independently owned, strategically minded, creatively driven, and results obsessed. We speak QSR, CPG, branding, analytics, conversion rates. And we’re fueled by an entrepreneurial need to disrupt the status quo. If these are traits you’d like in an agency – or are missing from your current one – let’s connect. We’d love to show you how our unrivalled approach to building brands can benefit your own. <br><br>
+        <div class="text" style="width:60%">
+Hello, we’re MMB. You may not know us, but you know the brands we’ve turned into industry leaders And we can do the same for yours. In fact, that’s why we moved here. So let’s <a href="#contact">connect</a>.
 
 		</div>
 		</div>
@@ -165,6 +164,10 @@ We’re independently owned, strategically minded, creatively driven, and result
       <div class="big-text" style="margin-top:150px; padding:100px;">WE ARE MAKERS OF RELEVANCE.</div>	
         <div class="tag"></div>
         <div class="text">
+We've got a 20-year legacy of building multi-dimensional, industry-leading brands, we specialize in growing businesses in hyper-competitive categories. From food and fashion, to automotive and healthcare.
+<br><br>
+We’re independently owned, strategically minded, creatively driven, and results obsessed. We speak QSR, CPG, branding, analytics, conversion rates. And we’re fueled by an entrepreneurial need to disrupt the status quo. If these are traits you’d like in an agency – or are missing from your current one – let’s connect. We’d love to show you how our unrivalled approach to building brands can benefit your own. <br><br>
+
           <div class="video-embed">
     <iframe src="https://player.vimeo.com/video/548569315" width="750"></iframe>
 </div>
@@ -180,6 +183,8 @@ We’re independently owned, strategically minded, creatively driven, and result
       <div class="big-text" style="margin-top:150px; padding:100px;">LET'S MAKE THINGS TOGETHER.</div>	
         <div class="tag"></div>
         <div class="text">
+(617) 670-9700<br>
+<a href="mailto:newbusiness@mmb580.com">newbusiness@mmb580.com</a>
           <br><br>
       </div>
   </div>
