--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@ Hello, we’re MMB. You may not know us, but you know the brands we’ve turned 
 		</div>
 	</div>
     
-
+<div class="content">
     <div class="page1" id="work">
       <div class="big-text" style="margin-top:150px; padding:100px;">WE ARE MAKERS OF RELEVANCE.</div>	
         <div class="tag"></div>
-        <div class="text1" stlye="width:60%; margin-left:10%;">
+        <div class="text1">
 We've got a 20-year legacy of building multi-dimensional, industry-leading brands, we specialize in growing businesses in hyper-competitive categories. From food and fashion, to automotive and healthcare.
 <br><br>
 We’re independently owned, strategically minded, creatively driven, and results obsessed. We speak QSR, CPG, branding, analytics, conversion rates. And we’re fueled by an entrepreneurial need to disrupt the status quo. If these are traits you’d like in an agency – or are missing from your current one – let’s connect. We’d love to show you how our unrivalled approach to building brands can benefit your own. <br><br>
@@ -178,6 +178,7 @@ We’re independently owned, strategically minded, creatively driven, and result
 		
       </div>
   </div>
+	
   
       <div class="content" id="contact">
       <div class="big-text" style="margin-top:150px; padding:100px;">LET'S MAKE THINGS TOGETHER.</div>	
