--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@ Hello, we’re MMB. You may not know us, but you know the brands we’ve turned 
 		</div>
 		</div>
 	</div>
-    
-<div class="content">
+
+	
     <div class="page1" id="work">
+<div class="content" style="margin-top:50px">
       <div class="big-text" style="margin-top:150px; padding:100px;">WE ARE MAKERS OF RELEVANCE.</div>	
         <div class="tag"></div>
         <div class="text1">
