--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Hello, we’re MMB. You may not know us, but you know the brands we’ve turned 
 	
     <div class="page1" id="work">
 <div class="content" style="margin-top:50px">
-      <div class="big-text" style="margin-top:150px; padding:100px;">WE ARE MAKERS OF RELEVANCE.</div>	
+      <div class="big-text">WE ARE MAKERS OF RELEVANCE.</div>	
         <div class="tag"></div>
         <div class="text1">
 We've got a 20-year legacy of building multi-dimensional, industry-leading brands, we specialize in growing businesses in hyper-competitive categories. From food and fashion, to automotive and healthcare.
@@ -182,7 +182,7 @@ We’re independently owned, strategically minded, creatively driven, and result
 	
   
       <div class="content" id="contact">
-      <div class="big-text" style="margin-top:150px; padding:100px;">LET'S MAKE THINGS TOGETHER.</div>	
+      <div class="big-text" style="margin-top:150px;">LET'S MAKE THINGS TOGETHER.</div>	
         <div class="tag"></div>
         <div class="text">
 (617) 670-9700<br>
