--- a/index.html
+++ b/index.html
@@ -182,14 +182,17 @@ We’re independently owned, strategically minded, creatively driven, and result
 	
   
       <div class="content" id="contact">
+	      <div class="page">
       <div class="big-text" style="margin-top:150px;">LET'S MAKE THINGS TOGETHER.</div>	
         <div class="tag"></div>
-        <div class="text">
+       		 <div class="text">
 (617) 670-9700<br>
 <a href="mailto:newbusiness@mmb580.com">newbusiness@mmb580.com</a>
           <br><br>
-      </div>
+      		</div>
   </div>
+	    </div>
+
   
   </body>
 </html>
