--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
     height: 100%;
 }
         
+		.strip-pic{
+	position:fixed; bottom:0; right:0;
+			width:20%;
+			z-index:-1;
+
+		}
 
 		
 	</style>
@@ -142,6 +148,7 @@
 </head>
 
 <body class="backgroundcolor">
+	<div class="strip-pic"><img src="strip-pic.jpg"></div>
 	
 	<div class="page" id="about">
         
