--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 
 <body class="backgroundcolor">
-	<div class="strip-pic"><img src="strip-pic.jpg"></div>
+	<div class="strip-pic"><img src="miami-strip.jpg"></div>
 	
 	<div class="page" id="about">
         
